# agent-platform

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  TODO.md  debug_session.py  docker-compose.yml  pyproject.toml  requirements_v2.md  test.db
agents/coding/: analyzer_agent.py
agents/job/: agent.py  repository.py
agents/medical/: agent.py  pipelines.py
agents/shared/: base.py
agents/simplechat/: agent.py
apps/api/: dependencies.py  main.py  schemas.py
config/: model_routing.yaml  resume_profile_example.yaml
core/: config.py
core/events/: bus.py
core/execution/: registry.py  retry.py  runner.py  setup.py
core/llm/: base.py  litellm_client.py  prompt_registry.py
core/services/: context.py
core/storage/: base.py  gdrive.py  postgres.py  qdrant.py  utils.py
core/telemetry/: logging.py  tracing.py
core/utils/: retry.py
database/: models.py
database/migrations/: env.py
docs/: ARCHITECTURE.md  DOMAIN_MODEL.md  LITELLM_INTEGRATION_AND_ROUTING_GUIDE.md  MIGRATIONS.md  N8N_INTEGRATION.md  SIMPLE_START_GUIDE.md  repo_analyzer_agent.md
docs/agents/: job.md  medical.md  repo_analyzer.md  simple_chat.md
docs/archive/: AGENT_HANDOFF.md  AUDIT.md  HOWTO_DEBUG_AGENTS.md  JOB_DOMAIN.md  SIMPLE_START_GUIDE.md  operations.md
scripts/: chat_cli.py  check_env.py  seed_resume_profile.py  smoke_tests.py
tests/: test_analyzer_agent.py  test_execution.py  test_job_domain.py  test_llm.py  test_medical_agent.py  test_medical_e2e.py  test_n8n_api.py  test_platform.py  test_registry.py  test_simplechat_agent.py  test_smoke.py
(+23 files in other folders)
